fixed z-index inconsistency b/t ff and webkit

--- a/src/sass/_starfield.scss
+++ b/src/sass/_starfield.scss
@@ -15,7 +15,7 @@
     right: 0;
     bottom: 0;
     overflow: hidden;
-    //z-index: -1;
+    z-index: 0;
     
     img { position : absolute; }
    .fast {
